# Aviatar-Qt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: application.cpp  application.hpp  main.cpp  mainwindow.cpp  supplement.hpp
